first pass customization

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,70 +1,185 @@
----
----
 
-@string{aps = {American Physical Society,}}
 
-@book{einstein1956investigations,
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{lim_predictors_2016,
+	title = {Predictors of urban variable source area: {A} cross-section analysis of urbanized catchments in the united states},
+	copyright = {This article is protected by copyright. All rights reserved.},
+	issn = {1099-1085},
+	shorttitle = {Predictors of urban variable source area},
+	url = {http://onlinelibrary.wiley.com/doi/10.1002/hyp.10943/full},
+	doi = {10.1002/hyp.10943},
+	abstract = {Many studies have empirically confirmed the relationship between urbanization and changes to the hydrologic cycle and degraded aquatic habitats. While much of the literature focuses on extent and configuration of impervious area as a causal determinant of degradation, in this article I do not attribute causes of decreased watershed storage on impervious area a priori. Rather, adapting the concept of variable source area (VSA) and its relationship to incremental storage to the particular conditions of urbanized catchments, I develop a statistically-robust linear regression-based methodology to detect evidence of VSA-dominant response. Using the physical and meteorological characteristics of the catchments as explanatory variables, I then use logistic regression to statistically analyze significant predictors of the VSA classification. I find that the strongest predictor of VSA-type response is the percent of undeveloped area in the catchment. Characteristics of developed areas, including total impervious area, percent developed open space, and the type of drainage infrastructure do not add to the explanatory power of undeveloped land in predicting VSA-type response. Within only developed areas, I find that total impervious area (TIA) and percent developed open space both decrease the odds of a catchment exhibiting evidence of VSA-type response and the effect of developed open space is more similar to that of TIA than undeveloped land in predicting VSA response. Different types of stormwater management infrastructure, including combined sewer systems (CSS) and infiltration, retention, and detention infrastructure are not found to have strong statistically significant effects on probability of VSA-type response. VSA-type response is also found to be stronger during the growing season than the dormant season. These findings are consistent across a national cross-section of urbanized watersheds, a higher resolution dataset of Baltimore Metropolitan Area watersheds, and a subsample of watersheds confirmed not to be served by (CSS). This article is protected by copyright. All rights reserved.},
+	language = {en},
+	urldate = {2016-07-22},
+	journal = {Hydrological Processes},
+	author = {Lim, TC},
+	month = jun,
+	year = {2016},
+	keywords = {Effective Impervious Area (EIA), Rainfall-runoff ratio, regression analysis, urbanized watersheds, Variable source area (VSA)},
+	pages = {4799--4814},
+	file = {onlineLibraryTPS.pdf:/home/tclim/Zotero/storage/25NV6MNJ/onlineLibraryTPS.pdf:application/pdf;Snapshot:/home/tclim/Zotero/storage/5C3DC7WW/abstract.html:text/html},
+  pdf = {2016_HP_lim_predictors_UVSA_accepted_manuscript.pdf},
+  html = {http://onlinelibrary.wiley.com/doi/10.1002/hyp.10943/full}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+
+@article{lim_empirical_2017,
+	title = {An empirical study of spatial-temporal growth patterns of a voluntary residential green infrastructure program},
+	volume = {0},
+	issn = {0964-0568},
+	url = {http://dx.doi.org/10.1080/09640568.2017.1350146},
+	doi = {10.1080/09640568.2017.1350146},
+	abstract = {Voluntary residential green infrastructure (GI) stormwater management retrofit programs can help cities comply with environmental regulations while also improving quality of life. Previous research has identified influential factors in residents’ willingness to adopt GI, but few have simultaneously studied the spatial and temporal dynamics of GI. I use a six-year record of participation in a voluntary residential GI program in Washington DC to explore how neighborhood characteristics and social influence affect GI adoption over time. Statistical regression and Monte Carlo permutation resampling techniques are used to explain the spatial-temporal patterns of growth of the program. I demonstrate empirical evidence that participation location is increasingly determined by the locations of previous participants. These findings suggest that past participants will increasingly influence spatial clustering of GI in the city.},
+	number = {0},
+	urldate = {2017-08-02},
+	journal = {Journal of Environmental Planning and Management},
+	author = {Lim, Theodore Chao},
+	month = jul,
+	year = {2017},
+	keywords = {environmental behavior, green infrastructure, residential stormwater management, spatial-temporal patterns, voluntary participation},
+	pages = {1--20},
+	file = {09640568.2017.pdf:/home/tclim/Zotero/storage/8CPUDTDS/Lim2017JEPM-spatialtemporal.pdf:application/pdf;Snapshot:/home/tclim/Zotero/storage/7ZMVVQ4U/09640568.2017.html:text/html},
+  pdf = {2017_Lim_JEnvPlanningMgmt_accepted_manuscript.pdf},
+  html = {http://dx.doi.org/10.1080/09640568.2017.1350146}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  selected={true}
+
+@article{lim_effects_2017,
+	title = {Effects of spatial configuration of imperviousness and green infrastructure networks on hydrologic response in a residential sewershed},
+	volume = {53},
+	issn = {0043-1397},
+	doi = {10.1002/2017WR020631},
+	abstract = {Green infrastructure (GI) is an approach to stormwater management that promotes natural processes of infiltration and evapotranspiration, reducing surface runoff to conventional stormwater drainage infrastructure. As more urban areas incorporate GI into their stormwater management plans, greater understanding is needed on the effects of spatial configuration of GI networks on hydrological performance, especially in the context of potential subsurface and lateral interactions between distributed facilities. In this research, we apply a three-dimensional, coupled surface-subsurface, land-atmosphere model, ParFlow.CLM, to a residential urban sewershed in Washington DC that was retrofitted with a network of GI installations between 2009 and 2015. The model was used to test nine additional GI and imperviousness spatial network configurations for the site and was compared with monitored pipe-flow data. Results from the simulations show that GI located in higher flow-accumulation areas of the site intercepted more surface runoff, even during wetter and multiday events. However, a comparison of the differences between scenarios and levels of variation and noise in monitored data suggests that the differences would only be detectable between the most and least optimal GI/imperviousness configurations. Plain Language Summary This research evaluates the effectiveness of green stormwater infrastructure management techniques in residential neighborhoods and the dependence of effectiveness on spatial location within the neighborhood. We find that locating green infrastructure on properties with high flow accumulation mitigates more runoff, but that the differences in effectiveness are only expected to be detectable through flow monitors between the most and least optimal configurations.},
+	number = {9},
+	journal = {Water Resources Research},
+	author = {Lim, Theodore C. and Welty, Claire},
+	month = sep,
+	year = {2017},
+	note = {WOS:000413484200033},
+	pages = {8084--8104}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+
+@article{lim_assessing_2018,
+	title = {Assessing {Variability} and {Uncertainty} in {Green} {Infrastructure} {Planning} {Using} a {High}-{Resolution} {Surface}-{Subsurface} {Hydrological} {Model} and {Site}-{Monitored} {Flow} {Data}},
+	volume = {4},
+	issn = {2297-3362},
+	url = {https://www.frontiersin.org/articles/10.3389/fbuil.2018.00071/full},
+	doi = {10.3389/fbuil.2018.00071},
+	abstract = {Green infrastructure (GI) is increasingly being used in urban areas to supplement the function of conventional drainage infrastructure. GI relies on the “natural” hydrological processes of infiltration and evapotranspiration to treat surface runoff close to where it is generated, alleviating loading on the conventional infrastructure systems. This research addresses growing interest in identification and quantification of uncertainties with distributed, infiltration-based stormwater control measures, retrofitted on private and public properties and in right-of-ways in existing urban areas. We identify four major sources of variability and uncertainty in cumulative performance of systems that rely on extensive implementation of distributed GI: non-additive effects of individual best management practices (BMPs) at the catchment scale; the spatial configuration of fine-scale land use and land cover changes; performance changes due to climate change; and noise levels present in urban flow monitoring programs. Using a three-dimensional coupled surface-subsurface hydrological model of a residential sewershed in Washington DC, we find that prolonged, large-magnitude rain events affect various spatial configurations of GI networks differently. Runoff peaks and volumes can both be influenced by the spatial permutations of infiltration opportunities in addition to the absolute magnitude of treated area. However, the magnitude of the last source of uncertainty—noise levels in urban flow monitoring programs—may be larger than sources of variability associated with spatial changes in fine-scale land use and land cover. Changes associated with climate change-- more frequent and larger rainfall events-- will likely intensify performance differences between spatial configurations of GI but also increase noise levels in urban flow monitoring programs.},
+	language = {English},
+	urldate = {2019-01-16},
+	journal = {Frontiers in Built Environment},
+	author = {Lim, Theodore C. and Welty, Claire},
+	year = {2018},
+	keywords = {Climate Change, fine-scale land cover, Green Infrastructure (GI), ParFlow.CLM, uncertainty, variability},
+	file = {Full Text PDF:/home/tclim/Zotero/storage/8S4BSLST/Lim and Welty - 2018 - Assessing Variability and Uncertainty in Green Inf.pdf:application/pdf},
+  pdf={},
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+
+@article{lim_revitalizing_2018,
+	title = {Revitalizing urban neighborhoods by adopting green infrastructure— the case of {Washington} {D}.{C}. ({In} {Chinese})},
+	volume = {33},
+	doi = {10.22217/upi.2017.423},
+  abstract = {The concept of Green Infrastructure (GI), or using the natural processes of evapotranspiration
+and infiltration to manage stormwater runoff close to where rain falls is a popular concept
+among urbanists. In addition to providing the ecosystem services of flood management, GI
+realizes other goals of increasing urban livability, through mitigating urban heat island effect,
+providing community amenity, purifying air, and even reducing crime. At the same time, GI has
+been shown to be primarily driven by federal-level stormwater management regulations to make
+expensive improvements to aging infrastructure. GI is one way that cities may achieve this goal
+more efficiently. In this paper, I trace the history of stormwater infrastructure regulation and
+urban sustainability in the US, how this national context influenced local policy in Washington
+DC neighborhoods. In addition to the popular narrative that GI can spur neighborhood
+revitalization, I identify the market-driven urban processes that determine GI locations in already
+revitalizing neighborhoods. Using an overlay analysis of these factors—centrally-driven planning
+processes, distributed voluntary participation and distributed development patterns—I show how
+different neighborhoods throughout the District are likely to have different distributions of Green
+Infrastructure adoption rates, with areas experiencing high re-investment showing the highest
+levels of probable GI adoption.},
+	number = {3},
+	journal = {Urban Planning International},
+	author = {Lim, Theodore},
+	year = {2018},
+	pages = {23 -- 31},
+  pdf = {Lim2018UPI-DC_GI_revitalization_English.pdf},
+  html={http://www.upi-planning.org/EN/Magazine/Show.aspx?ID=47445}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{lim_use_2019,
+	title = {Use of the {McHargian} {LUSA} in agricultural research and decision-making in the age of non-stationarity and big earth observation data},
+	issn = {2524-5287},
+	url = {https://doi.org/10.1007/s42532-019-00022-6},
+	doi = {10.1007/s42532-019-00022-6},
+	abstract = {In the past 50 years, there have been two major changes that are of methodological and consequential importance to the McHargian land-use suitability analysis (LUSA): increasing evidence of non-stationarity of global and regional ecological conditions and increasing availability of high-resolution spatial–temporal earth observation data. For 50 years, the McHargian LUSA has been an important analysis tool for designers and planners for both regional conservation planning and development. McHarg’s LUSA is a decision support tool that reduces the dimensions of spatial–temporal data. This makes the technique relevant beyond decision support to spatial identification and prediction of areas of socio-ecological opportunity, risk, and priority. In this article, I use a set of recent studies relating to agricultural LUSA to reveal relationships between the traditional McHargian LUSA and related spatial–temporal research methods that are adapting to more data and non-stationary ecological conditions. Using a classification based on descriptive, predictive, and prescriptive research activities, I organize these related methods and illustrate how linkages between research activities can be used to assimilate more kinds of spatial “big data,” address non-stationarity in socio-ecological systems, and suggest ways to enhance decision-making and collaboration between planners and other sciences.},
+	language = {en},
+	urldate = {2019-08-21},
+	journal = {Socio-Ecological Practice Research},
+	author = {Lim, Theodore C},
+	month = aug,
+	year = {2019},
+	keywords = {Agriculture, Big earth observation data, Land-use suitability analysis, Non-stationarity},
+	file = {Springer Full Text PDF:/home/tclim/Zotero/storage/832RNMG2/Lim - 2019 - Use of the McHargian LUSA in agricultural research.pdf:application/pdf},
+  pdf = {2019_sepr_mchargian_big_data_lim_accepted_manuscript.pdf},
+  html = {https://doi.org/10.1007/s42532-019-00022-6}
+}
+
+@article{hsu_rocky_2020,
+	title = {Rocky steps towards adaptive management and adaptive governance in implementing green infrastructure at urban scale in {Philadelphia}},
+	issn = {1618-8667},
+	url = {http://www.sciencedirect.com/science/article/pii/S1618866720306087},
+	doi = {10.1016/j.ufug.2020.126791},
+	abstract = {Many scholars have recently looked to adaptive management and adaptive governance as new approaches to implement green infrastructure. Much of the recent scholarship, however, that argues for combining the three concepts of adaptive management, adaptive governance, and green infrastructure is either theoretical, at early planning stages, or based on relatively small experiments. Since green infrastructure is now being implemented in a number of cities at large spatial scales, this paper examines how and whether combining these theories helps to solve anticipated problems compared to earlier work on environmental governance and political implementation. The city of Philadelphia has become known as a national and international leader in using green infrastructure for stormwater management. This paper therefore analyzes Philadelphia’s early experiences in the period from 2009 to 2015 as a test at urban scale of the usefulness of theories of adaptive management and adaptive governance in implementing green infrastructure. The city of Philadelphia found itself rapidly changing its implementation approach multiple times in response to political pressure. The city’s changing responses illustrate challenges in implementing environmental policies among actors with differing levels of political power, economic interests, and participation. This paper describes the rapid changes in programs using mixed methods and data sources including quantitative analysis of the city’s billing and program data, qualitative interpretation of media and public documents, and subsequent interviews with city officials. Understanding how and why Philadelphia rapidly changed its approach will be interesting to policymakers and advocates in other cities who also intend to implement green infrastructure at urban scale.},
+	language = {en},
+	urldate = {2020-07-30},
+	journal = {Urban Forestry \& Urban Greening},
+	author = {Hsu, David and Lim, Theodore Chao and Meng, Ting},
+	month = jul,
+	year = {2020},
+	keywords = {adaptive governance, Adaptive management, green infrastructure, implementation, urban scale},
+	pages = {126791},
+	file = {ScienceDirect Full Text PDF:/home/tclim/Zotero/storage/KHC4DA84/Hsu et al. - 2020 - Rocky steps towards adaptive management and adapti.pdf:application/pdf;ScienceDirect Snapshot:/home/tclim/Zotero/storage/HWFUCMMV/S1618866720306087.html:text/html},
+  selected={true},
+  pdf = {2020_UFUG_Hsu_Lim_Meng_adapt_gov_GI.pdf},
+  html = {http://www.sciencedirect.com/science/article/pii/S1618866720306087}
+}
+
+
+@article{hoover_examining_2020,
+	title = {Examining privilege and power in {US} urban parks and open space during the double crises of antiblack racism and {COVID}-19},
+	issn = {2524-5287},
+	url = {https://doi.org/10.1007/s42532-020-00070-3},
+	doi = {10.1007/s42532-020-00070-3},
+	abstract = {In this perspective, we argue that creating the positive outcomes socio-ecological researchers and practitioners seek for urban areas requires acknowledging and addressing the interactions of race and systemic racism in parks, open and green spaces. Racial experiences are inseparable from physical landscapes and the processes of designing, managing, or studying them. From COVID-19 to the Black Lives Matter movement and protests, the events of 2020 in the United States underscore how considerations of social justice must extend beyond the conventional distributional focus of environmental justice. It must incorporate an understanding of how the built environment is racialized spatially, but not always readily quantified through the proximity-based measurements frequently used in research and practice. The perspective is organized in three main parts. The first part presents a series of vignettes to frame the ways cities and individuals participate, respond, and interact under COVID-19 with racial segregation as the backdrop. The second part suggests a stepwise approach to building an understanding of racial inequities in socio-ecological systems (SES) research and practice including four entry points: (1) racialized spatial distribution of hazards and amenities, (2) racialized qualities of space, (3) racialized people in space, and (4) racialized creation of space. Finally, the third part proposes actions the SES community can take to enhance our commitment to community recovery, improvement, and thrivability. This perspective cautions practitioners and researchers against opportunistic or quick-fix solutions, and instead challenges our colleagues to be inclusive of disenfranchised voices in shaping socio-ecological goals, now more than ever. The goal of this perspective is to spark engagement with power and privilege in parks and open space using the example of COVID-19 and race in the US.},
+	language = {en},
+	urldate = {2020-11-25},
+	journal = {Socio-Ecological Practice Research},
+	author = {Hoover, Fushcia -Ann and Lim, Theodore C.},
+	month = nov,
+	year = {2020},
+	file = {Springer Full Text PDF:/home/tclim/Zotero/storage/ABB9SEF6/Hoover and Lim - 2020 - Examining privilege and power in US urban parks an.pdf:application/pdf},
+  selected={true},
+  html = {https://doi.org/10.1007/s42532-020-00070-3}
+}
+
+
+@article{lim_model_2021,
+	title = {Model emulators and complexity management at the environmental science-action interface},
+	volume = {135},
+	issn = {1364-8152},
+	url = {http://www.sciencedirect.com/science/article/pii/S1364815220309853},
+	doi = {10.1016/j.envsoft.2020.104928},
+	abstract = {As our understanding of the interactions present in socio-ecological systems advance, emulation modeling can help reduce the complexity and required computational resources of the models used to represent these systems. While emulation is commonly used in model meta-analyses and parameterization, it has been less explored in the context of environmental management. In this research, I analyze the reflections of a group of watershed modelers on environmental model emulation. I find that decreased simulation run-times are an important motivation because emulators enable stakeholders to interact directly with the model. However, participants also reported that criteria for an emulator in an environmental management context should also assess its capability to act as a platform for learning and to manage stakeholder perceptions of the modeling process. Further, at the science-action interface, stakeholder perceptions play a significant role in the approach to model emulation through determining acceptable levels complexity in model processes and inputs.},
+	language = {en},
+	urldate = {2020-11-20},
+	journal = {Environmental Modelling \& Software},
+	author = {Lim, Theodore C.},
+	month = jan,
+	year = {2021},
+	keywords = {Emulation model, Environmental management, Science-action interface, Surrogate model},
+	pages = {104928},
+	file = {ScienceDirect Full Text PDF:/home/tclim/Zotero/storage/WG2J9QJ6/Lim - 2021 - Model emulators and complexity management at the e.pdf:application/pdf;ScienceDirect Snapshot:/home/tclim/Zotero/storage/7WK3AZBK/S1364815220309853.html:text/html},
+  selected={true},
+  pdf = {2021_em&s_emulation_env_sci_mgmt_preprint.pdf},
+  html = {http://www.sciencedirect.com/science/article/pii/S1364815220309853}
 }
