intial personalization of all content

--- a/_posts/2015-05-15-images.md
+++ b/_posts/2015-05-15-images.md
@@ -13,7 +13,7 @@ Jean shorts raw denim Vice normcore, art party High Life PBR skateboard stumptow
 </div>
 <div class="row mt-3">
     <div class="col-sm mt-3 mt-md-0">
-        <img class="img-fluid rounded z-depth-1" src="{{ site.baseurl }}/assets/img/7.jpg">
+        <img class="img-fluid rounded z-depth-1" src="{{ site.baseurl }}/assets/img/7.jpg" width = "50">
     </div>
 </div>
 <div class="caption">
