new es&t and cageo papers

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,56 @@
+@article{lim_comparison_2022,
+	title = {Comparison of machine learning algorithms for emulation of a gridded hydrological model given spatially explicit inputs},
+	volume = {159},
+	issn = {0098-3004},
+	url = {https://www.sciencedirect.com/science/article/pii/S009830042100306X},
+	doi = {10.1016/j.cageo.2021.105025},
+	abstract = {This study compares the performance of several machine learning algorithms in reproducing the spatial and temporal outputs of the process-based, hydrological model, ParFlow.CLM. Emulators or surrogate models are often used to reduce complexity and simulation times of complex models, and have typically been applied to evaluate parameter sensitivity or for model parameter tuning, without explicit treatment of variation resulting from spatially explicit inputs to the model. Here we present a case study in which we evaluate candidate machine learning algorithms for suitability emulating model outputs given spatially explicit inputs. We find that among random forest, gaussian process, k-nearest neighbors, and deep neural networks, the random forest algorithm performs the best on small training sets, is not as sensitive to hyperparameters chosen for the machine learning model, and can be trained quickly. Although deep neural networks were hypothesized to be able to better capture the potential nonlinear interactions in ParFlow.CLM, they also required more training data and much more refined tuning of hyperparameters to achieve the potential benefits of the algorithm.},
+	language = {en},
+	urldate = {2022-01-12},
+	journal = {Computers \& Geosciences},
+	author = {Lim, Theodore and Wang, Kaidi},
+	month = feb,
+	year = {2022},
+	keywords = {Emulation modeling, Machine learning, ParFlow.CLM, Surrogate modeling},
+	pages = {105025},
+	file = {ScienceDirect Full Text PDF:/home/tclim/Zotero/storage/BV53VLME/Lim and Wang - 2022 - Comparison of machine learning algorithms for emul.pdf:application/pdf;ScienceDirect Snapshot:/home/tclim/Zotero/storage/KJBKEIXV/S009830042100306X.html:text/html},
+	pdf = {2022_cageo_lim_wang_ML_emulator_accepted_manuscript.pdf}
+}
+
+@article{lim_technoeconomic_2022,
+	title = {Technoeconomic {Analysis} of {Negative} {Emissions} {Bioenergy} with {Carbon} {Capture} and {Storage} through {Pyrolysis} and {Bioenergy} {District} {Heating} {Infrastructure}},
+	issn = {0013-936X},
+	url = {https://pubs.acs.org/doi/full/10.1021/acs.est.1c03478},
+	doi = {10.1021/acs.est.1c03478},
+	urldate = {2022-01-11},
+	journal = {Environmental Science \& Technology},
+	author = {Lim, Theodore Chao and Cuellar, Amanda and Langseth, Kyle and Waldon, Jefferson L.},
+	month = jan,
+	year = {2022},
+	note = {Publisher: American Chemical Society},
+	file = {Full Text PDF:/home/tclim/Zotero/storage/I3IPW7GV/Lim et al. - 2022 - Technoeconomic Analysis of Negative Emissions Bioe.pdf:application/pdf},
+	pdf = {2022_es&t_lim_etal_local_scale_beccs_accepted_manusc.pdf},
+}
+
+@article{lim_patterns_2021,
+	title = {Patterns in environmental priorities revealed through government open data portals},
+	volume = {64},
+	issn = {0736-5853},
+	url = {https://www.sciencedirect.com/science/article/pii/S0736585321001179},
+	doi = {10.1016/j.tele.2021.101678},
+	abstract = {The ways in which environmental priorities are framed are varied and influenced by political forces. One technological advance--the proliferation of government open data portals (ODPs)--has the potential to improve governance through facilitating access to data. Yet it is also known that the data hosted on ODPs may simply reflect the goals and interests of multiple levels of political power. In this article, I use traditional statistical correlation and regression techniques along with newer natural language processing and machine learning algorithms to analyze the corpus of datasets hosted on government ODPs (total: 49,066) to extract patterns that relate scales of governance and political liberalism/conservatism to the priorities and meaning attached to environmental issues. I find that state-level and municipal-level ODPs host different categories of environmental datasets, with municipal-level ODPs generally hosting more datasets pertaining to services and amenities and state-level ODPs hosting more datasets pertaining to resource protection and extraction. Stronger trends were observed for the influences of political conservatism/liberalism among state-level ODPs than for municipal-level ODPs.},
+	language = {en},
+	urldate = {2021-07-26},
+	journal = {Telematics and Informatics},
+	author = {Lim, Theodore C},
+	month = nov,
+	year = {2021},
+	keywords = {Open data, Open government, Environmental policy, Local and state government},
+	pages = {101678},
+	file = {ScienceDirect Full Text PDF:/home/tclim/Zotero/storage/9XWPXYGI/Lim - 2021 - Patterns in environmental priorities revealed thro.pdf:application/pdf;ScienceDirect Snapshot:/home/tclim/Zotero/storage/4DVCNAL7/S0736585321001179.html:text/html},
+	pdf = {2021_tele_patterns_env_priorities_odps_accepted_manuscript.pdf},
+}
+
 
 @article{lim_model_2021,
 	title = {Model emulators and complexity management at the environmental science-action interface},
