--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,12 +14,14 @@
 	keywords = {Emulation modeling, Machine learning, ParFlow.CLM, Surrogate modeling},
 	pages = {105025},
 	file = {ScienceDirect Full Text PDF:/home/tclim/Zotero/storage/BV53VLME/Lim and Wang - 2022 - Comparison of machine learning algorithms for emul.pdf:application/pdf;ScienceDirect Snapshot:/home/tclim/Zotero/storage/KJBKEIXV/S009830042100306X.html:text/html},
-	pdf = {2022_cageo_lim_wang_ML_emulator_accepted_manuscript.pdf}
+	pdf = {2022_cageo_lim_wang_ML_emulator_accepted_manuscript.pdf},
+	html = {https://www.sciencedirect.com/science/article/pii/S009830042100306X},
 }
 
 @article{lim_technoeconomic_2022,
 	title = {Technoeconomic {Analysis} of {Negative} {Emissions} {Bioenergy} with {Carbon} {Capture} and {Storage} through {Pyrolysis} and {Bioenergy} {District} {Heating} {Infrastructure}},
 	issn = {0013-936X},
+	abstract = {},
 	url = {https://pubs.acs.org/doi/full/10.1021/acs.est.1c03478},
 	doi = {10.1021/acs.est.1c03478},
 	urldate = {2022-01-11},
@@ -30,7 +32,10 @@
 	note = {Publisher: American Chemical Society},
 	file = {Full Text PDF:/home/tclim/Zotero/storage/I3IPW7GV/Lim et al. - 2022 - Technoeconomic Analysis of Negative Emissions Bioe.pdf:application/pdf},
 	pdf = {2022_es&t_lim_etal_local_scale_beccs_accepted_manusc.pdf},
+	html = {https://pubs.acs.org/doi/full/10.1021/acs.est.1c03478},
+	selected={true},
 }
+
 
 @article{lim_patterns_2021,
 	title = {Patterns in environmental priorities revealed through government open data portals},
@@ -49,6 +54,8 @@
 	pages = {101678},
 	file = {ScienceDirect Full Text PDF:/home/tclim/Zotero/storage/9XWPXYGI/Lim - 2021 - Patterns in environmental priorities revealed thro.pdf:application/pdf;ScienceDirect Snapshot:/home/tclim/Zotero/storage/4DVCNAL7/S0736585321001179.html:text/html},
 	pdf = {2021_tele_patterns_env_priorities_odps_accepted_manuscript.pdf},
+	html = {https://www.sciencedirect.com/science/article/pii/S0736585321001179},
+	selected={true},
 }
 
 @article{lim_model_2021,
@@ -85,7 +92,6 @@
 	month = nov,
 	year = {2020},
 	file = {Springer Full Text PDF:/home/tclim/Zotero/storage/ABB9SEF6/Hoover and Lim - 2020 - Examining privilege and power in US urban parks an.pdf:application/pdf},
-  selected={true},
   html = {https://doi.org/10.1007/s42532-020-00070-3}
 }
 
@@ -104,7 +110,6 @@
 	keywords = {adaptive governance, Adaptive management, green infrastructure, implementation, urban scale},
 	pages = {126791},
 	file = {ScienceDirect Full Text PDF:/home/tclim/Zotero/storage/KHC4DA84/Hsu et al. - 2020 - Rocky steps towards adaptive management and adapti.pdf:application/pdf;ScienceDirect Snapshot:/home/tclim/Zotero/storage/HWFUCMMV/S1618866720306087.html:text/html},
-  selected={true},
   pdf = {2020_UFUG_Hsu_Lim_Meng_adapt_gov_GI.pdf},
   html = {http://www.sciencedirect.com/science/article/pii/S1618866720306087}
 }
@@ -173,6 +178,7 @@ levels of probable GI adoption.},
 	keywords = {Climate Change, fine-scale land cover, Green Infrastructure (GI), ParFlow.CLM, uncertainty, variability},
 	file = {Full Text PDF:/home/tclim/Zotero/storage/8S4BSLST/Lim and Welty - 2018 - Assessing Variability and Uncertainty in Green Inf.pdf:application/pdf},
   pdf={},
+	html ={https://www.frontiersin.org/articles/10.3389/fbuil.2018.00071/full}
 }
 
 
@@ -188,7 +194,9 @@ levels of probable GI adoption.},
 	month = sep,
 	year = {2017},
 	note = {WOS:000413484200033},
-	pages = {8084--8104}
+	pages = {8084--8104},
+	html = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1002/2017WR020631},
+	pdf = {2017_wrr_effects_of_spatial_confi_green_infra.pdf}
 }
 
 
@@ -223,7 +231,7 @@ levels of probable GI adoption.},
 	abstract = {Many studies have empirically confirmed the relationship between urbanization and changes to the hydrologic cycle and degraded aquatic habitats. While much of the literature focuses on extent and configuration of impervious area as a causal determinant of degradation, in this article I do not attribute causes of decreased watershed storage on impervious area a priori. Rather, adapting the concept of variable source area (VSA) and its relationship to incremental storage to the particular conditions of urbanized catchments, I develop a statistically-robust linear regression-based methodology to detect evidence of VSA-dominant response. Using the physical and meteorological characteristics of the catchments as explanatory variables, I then use logistic regression to statistically analyze significant predictors of the VSA classification. I find that the strongest predictor of VSA-type response is the percent of undeveloped area in the catchment. Characteristics of developed areas, including total impervious area, percent developed open space, and the type of drainage infrastructure do not add to the explanatory power of undeveloped land in predicting VSA-type response. Within only developed areas, I find that total impervious area (TIA) and percent developed open space both decrease the odds of a catchment exhibiting evidence of VSA-type response and the effect of developed open space is more similar to that of TIA than undeveloped land in predicting VSA response. Different types of stormwater management infrastructure, including combined sewer systems (CSS) and infiltration, retention, and detention infrastructure are not found to have strong statistically significant effects on probability of VSA-type response. VSA-type response is also found to be stronger during the growing season than the dormant season. These findings are consistent across a national cross-section of urbanized watersheds, a higher resolution dataset of Baltimore Metropolitan Area watersheds, and a subsample of watersheds confirmed not to be served by (CSS). This article is protected by copyright. All rights reserved.},
 	language = {en},
 	urldate = {2016-07-22},
-	journal = {Hydrological Proces	ses},
+	journal = {Hydrological Processes},
 	author = {Lim, TC},
 	month = jun,
 	year = {2016},
