added abstract for es&t pub

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,7 +21,7 @@
 @article{lim_technoeconomic_2022,
 	title = {Technoeconomic {Analysis} of {Negative} {Emissions} {Bioenergy} with {Carbon} {Capture} and {Storage} through {Pyrolysis} and {Bioenergy} {District} {Heating} {Infrastructure}},
 	issn = {0013-936X},
-	abstract = {},
+	abstract = {Bioenergy with Carbon Capture and Storage (BECCS) has been identified as a cost-effective negative emissions technology that will be necessary to limit global warming to 1.5° C targets. Yet, the study of BECCS deployment has mainly focused on large-scale, centralized facilities and geologic sequestration. In this study, we perform a technoeconomic analysis of BECCS through pyrolysis technology within a district heating system using locally-grown switchgrass. The analysis is based on a unique case study of an existing switchgrass-fueled district heating system in the rural southeastern United States and combines empirical daily energy data with a retrospective analysis of add-on pyrolysis technology with biochar storage. We show that at current heating oil and switchgrass prices, Pyrolysis-Bioenergy (PyBE), and pyrolysis BECCS (PyBECCS) can each reach economic parity with a fossil fuel-based system when the price of carbon is $116/Mg CO2-eq and $51/Mg CO2-eq, respectively. In addition each can reach parity with a direct combustion bioenergy (BE) system when the price of carbon is $264/Mg CO2-eq and $212/Mg CO2-eq, respectively. However, PyBECCS cannot reach economic parity with BE without revenue from carbon sequestration while PyBE can, and in some cases PyBECCS could counterintuitively require more reliance on fossil fuels than both the PyBE case and BE.},
 	url = {https://pubs.acs.org/doi/full/10.1021/acs.est.1c03478},
 	doi = {10.1021/acs.est.1c03478},
 	urldate = {2022-01-11},
