added sustainability article

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,23 @@
+@article{huang_gsi_2022,
+	title = {Interdisciplinary Inquiry and Spatial Green Stormwater Infrastructure Research},
+	volume = {14},
+	issn = {},
+	url = {https://www.mdpi.com/2071-1050/14/3/1198},
+	doi = {10.3390/su14031198},
+	abstract = {The use of vegetation and infiltration into soils to manage stormwater and water quality&mdash;called green stormwater infrastructure (GSI)&mdash;is now widely recognized as a viable alternative or supplement to the pipes and pumps of conventional, or &ldquo;gray&rdquo;, drainage infrastructure. Over the years, much research has emerged regarding spatial aspects of GSI implemented at large scales, including where it is located, where it should be located, and what metrics best represent the benefits it brings to different locations. Research in these areas involves expertise from multiple academic disciplines, but it is unclear whether and how researchers from different disciplines identify and approach questions related to the spatiality of GSI. By adopting the explanatory sequential mixed method design, we identified four categories of spatial GSI studies through a literature review of over 120 research papers: empirical, ecological, decision support systems, and optimization. Here, we present representative examples of these categories of spatial GSI studies, as well as associations between the academic disciplines represented in these categories of spatial GSI papers. Then, we conducted semi-structured interviews with a sample of GSI researchers which revealed the value of interdisciplinary training and knowledge. Finally, in this paper, we identify several gaps that could be addressed to improve interdisciplinary research on GSI implementation, and sustainability transitions in general.},
+	language = {en},
+	urldate = {2022-01-22},
+	journal = {Sustainability},
+	author = {Huang, Lechuan and Lim, Theodore and Misra, Shalini},
+	month = jan,
+	year = {2022},
+	keywords = {},
+	pages = {},
+	file = {},
+	pdf = {2022_Huang et al. - 2022 - Interdisciplinary Inquiry and Spatial Green Stormw.pdf},
+	html = {https://www.mdpi.com/2071-1050/14/3/1198},
+}
+
 @article{lim_comparison_2022,
 	title = {Comparison of machine learning algorithms for emulation of a gridded hydrological model given spatially explicit inputs},
 	volume = {159},
