update with Gunjan and Ayda's accomplishments

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,23 @@
+@article{kianmehr_envimet_2022,
+	title = {Quantifying Interactive Cooling Effects of Morphological Parameters and Vegetation-Related Landscape Features during an Extreme Heat Event},
+	volume = {10},
+	issn = {4},
+	url = {https://www.mdpi.com/2225-1154/10/4/60},
+	doi = {10.3390/cli10040060},
+	abstract = {In this study, we apply the ENVI-met model to evaluate the effects of combinations of morphological and vegetation-related landscape features on urban temperatures and thermal comfort. We simulated the thermal conditions of 126 scenarios, varying the aspect ratios of street canyons, vegetation cover and density, surface materials, and orientations toward the prevalent winds under an extreme heat situation. Our results show how the effects of physical and vegetation parameters interact and moderate each other. We also demonstrate how sensitive thermal comfort indices such as temperature and relative humidity are to the built environment parameters during different hours of a day. This study’s findings highlight the necessity of prioritizing heat mitigation interventions based on the site’s physical characteristics and landscape features and avoiding generic strategies for all types of urban environments.},
+	language = {en},
+	urldate = {2022-04-11},
+	journal = {Climate},
+	author = {Kianmehr, Ayda and Lim, Theodore},
+	month = apr,
+	year = {2022},
+	keywords = {},
+	pages = {},
+	file = {},
+	pdf = {Kianmehr and Lim - 2022 - Quantifying Interactive Cooling Effects of Morphol.pdf},
+	html = {https://www.mdpi.com/2225-1154/10/4/60},
+}
+
 @article{huang_gsi_2022,
 	title = {Interdisciplinary Inquiry and Spatial Green Stormwater Infrastructure Research},
 	volume = {14},
